# SpartaV2

./: .gitignore  README.md  abc_inference.py  aligner_interface.py  correction.py  main.py  prior_sampler.py  pyproject.toml  raxml_parser.py  setup.py  simulate_data.py  test_zipf.py  utility.py
.github/workflows/: build_wheels.yml
benchmark/: abc_benchmark.ipynb  benchmark.py  benchmark_fastmafft.ipynb  sanity.ipynb
benchmark/data/BBS11002_8/: raxml.tree  realigned.fasta  true_params.txt
benchmark/data/BBS11005_14/: raxml.bestModel  raxml.tree  realigned.fasta  true_params.txt
benchmark/data/BBS11006_8/: raxml.tree  realigned.fasta  true_params.txt
benchmark/data/BBS11007_9/: raxml.tree  realigned.fasta  true_params.txt
benchmark/data/BBS11011_5/: model_params.txt  raxml.tree  realigned.fasta  top_params.csv  true_params.txt
benchmark/data/BBS11013_5/: raxml.tree  realigned.fasta  true_params.txt
benchmark/data/BBS11014_6/: raxml.tree  realigned.fasta  true_params.txt
benchmark/data/BBS11016_8/: raxml.bestModel  raxml.tree  (+2 more)
benchmark/sanity_check/: msa.bestModel  msa.fasta
getting_priors/: zipf.py
spartaabc/: abc_inference.py  aligner_interface.py  correction.py  main.py  prior_sampler.py  raxml_parser.py  simulate_data.py  spabc.py  spartaabc.py  utility.py
spartaabc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spartaabc/getting_priors/: get_means.py  zipf.py
test/: ENOG5039UWA.fasta  ENOG5039UWA.newick
tests/correction_test/: test_1.py
tests/pipeline_test/: test.fasta  test.newick
tests/prior_test/: test_prior_reader.py
(+1981 files in other folders)
