[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spartaabc"
version = "0.2.5"
dependencies = [
    "scikit-learn",
    "pandas",
    "pyarrow",
    "biopython",
    "msasim",
    "msastats",
    "tqdm"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["spartaabc*"]  # ["*"] by default
exclude = ["test*"]  # empty by default
namespaces = false  # true by default